Design search API.
